fixed some styles

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,14 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+body {
+    height: 100vh;
+}
+
+#app {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
